# a-simple-ffmpeg-wrapper

./: LICENSE  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs
src/components/: AppLogo.tsx  ConversionType.tsx  DropZone.tsx  ErrorScreen.tsx  FFmpegStatus.tsx  FileList.tsx  UpdateNotification.css  UpdateNotification.tsx
src/hooks/: useConversion.ts  useUpdater.ts
src/types/: index.ts
