[package]
name = "a-simple-ffmpeg-wrapper"
version = "1.0.0"
description = "A Simple FFmpeg Wrapper - Desktop video/audio/image converter"
authors = ["you"]
edition = "2021"

[lib]
name = "ffmpeg_wrapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4"] }

